Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -28,6 +28,6 @@
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
-  "iti93:9.3": "con la conoscenza superiore della distruzione della nascita, ",
+  "iti93:9.3": "con la conoscenza superiore dell’eliminazione della nascita, ",
   "iti93:9.4": "non tornano più a nuova esistenza.” "
 }
