Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -27,7 +27,7 @@
   "iti93:8.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
-  "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
+  "iti93:9.2": "i saggi comprendendo correttamente (nel modo giusto), ",
   "iti93:9.3": "con l’eliminazione della nascita come superiore conoscenza, ",
   "iti93:9.4": "non tornano più a nuova esistenza.” "
 }
