--- a/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
@@ -3,6 +3,6 @@
   "iti94:2.2": "Quando c’è consapevolezza che la coscienza non è distratta e dispersa all’esterno, ne’ è intrappolata all’interno, ne’ si agita perchè non si impossessa di nulla, non c’è più futura generazione di nascita, vecchiaia, morte, sofferenza. ",
   "iti94:3.1": "Per il cercatore che ha abbandonato sette catene,* ",
   "iti94:3.2": "ha reciso il conduttore, ",
-  "iti94:3.3": "ha annientato la rinascita in saṁsāra, ",
+  "iti94:3.3": "ha annientato la rinascita nel saṁsāra, ",
   "iti94:3.4": "non c’è più ritorno ad alcuno stato di esistenza.” "
 }
