--- a/translation/de/sabbamitta/sutta/mn/mn3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn3_translation-de-sabbamitta.json
@@ -86,7 +86,7 @@
   "mn3:7.7": "Das ist der erste Grund für Lob. ",
   "mn3:7.8": "‚Sie geben auf, wovon der Lehrer sagt, sie sollen es aufgeben.‘ ",
   "mn3:7.9": "Das ist der zweite Grund für Lob. ",
-  "mn3:7.10": "‚Sie sind nicht genießerisch und lasch, führend im Abrutschen, und sie vernachlässigen nicht die Abgeschiedenheit.‘ ",
+  "mn3:7.10": "‚Sie sind nicht genießerisch und lasch, die Ersten bei Rückfällen, und sie vernachlässigen nicht die Abgeschiedenheit.‘ ",
   "mn3:7.11": "Das ist der dritte Grund für Lob. ",
   "mn3:7.12": "Die älteren Mönche und Nonnen verdienen aus diesen drei Gründen Lob. ",
   "mn3:7.13": "In diesem Fall verdienen die mittleren ",
