--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti85:2.1": "Cercatori, meditate contemplando il non bello (il ripugnante) nel corpo. ",
-  "iti85:2.2": "Lasciate prima di tutto che la consapevolezza (vigilanza) del respiro sia ben consolidata internamente ",
+  "iti85:2.2": "Lasciate prima di tutto che la consapevolezza (vigilanza) del respiro sia ben consolidata internamente / Lasciate che la consapevolezza (vigilanza) del respiro sia presente e ben consolidata internamente ",
   "iti85:2.3": "e meditate osservando l’impersistenza/impermanenza (CHANGE anicca everywhere to non persistente) di ogni condizione (cosa / UPDATE EVERY TRANSLATION condizione or creazione). ",
   "iti85:2.4": "Se si contempla il non bello (ripugnante) nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
   "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi inclinazione esterna verso pensieri tormentosi cesserà di esistere. ",
