--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti85:2.2": "Lasciate che la consapevolezza (vigilanza) del respiro sia presente e ben consolidata internamente [VADDHA: Footnote] ",
   "iti85:2.3": "e meditate osservando l’impersistenza/impermanenza (CHANGE anicca everywhere to non persistente) di ogni condizione (cosa / UPDATE EVERY TRANSLATION condizione or creazione). ",
   "iti85:2.4": "Se si contempla il non bello (ripugnante) nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
-  "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi inclinazione esterna verso pensieri tormentosi cesserà di esistere. ",
+  "iti85:2.5": "Se la consapevolezza del respiro sarà presemte e ben consolidata internamente, qualsiasi inclinazione esterna verso pensieri tormentosi cesserà di esistere. ",
   "iti85:2.6": "Se si contempla l’impersistenza/impermanenza di ogni condizione (creazione???), l’ignoranza viene abbandonata e la sapienza sorge. ",
   "iti85:3.1": "Un cercatore, che con continuo ardore (zelo) contempla il non bello nel corpo ",
   "iti85:3.2": "e che, consapevole (vigile) del respiro, ",
