Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti85:3.1": "Un cercatore che con continuo ardore (zelo) contempla il non bello nel corpo ",
   "iti85:3.2": "e consapevole (vigile) del respiro, ",
   "iti85:3.3": "vede la tranquillizzazione ",
-  "iti85:3.4": "di tutte le condizioni (creazioni), ",
+  "iti85:3.4": "di tutte le condizioni (creazioni). ",
   "iti85:4.1": "vede nel modo giusto (correttamente)* ",
   "iti85:4.2": "e in questo modo si libera. ",
   "iti85:4.3": "Questo è un sapiente (muni) che ha ottenuto la perfetta conoscenza, sereno (in pace),* ",
