--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti85:3.3": "vede la tranquillizzazione ",
   "iti85:3.4": "di tutte le condizioni (creazioni). ",
   "iti85:4.1": "Quel cercatore, vedendo nel modo giusto (correttamente)* ",
-  "iti85:4.2": "e in questo modo si libera. ",
+  "iti85:4.2": "in questo modo si libera. ",
   "iti85:4.3": "Questo è un sapiente (muni) che ha ottenuto la perfetta conoscenza, sereno (in pace),* ",
   "iti85:4.4": "che si è sottratto al giogo. * "
 }
