--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti85:2.4": "Se si contempla il non bello (ripugnante) nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
   "iti85:2.5": "Se la consapevolezza del respiro sarà presente e ben consolidata internamente, qualsiasi inclinazione esterna verso pensieri tormentosi cesserà di esistere. ",
   "iti85:2.6": "Se si contempla l’impersistenza/impermanenza di ogni condizione (creazione???), l’ignoranza viene abbandonata e la sapienza sorge. ",
-  "iti85:3.1": "Chi con continuo ardore (zelo) contempla il non bello nel corpo ",
+  "iti85:3.1": "Chi con continuo ardore (zelo) contempla il non bello nel corpo, ",
   "iti85:3.2": "e consapevole (vigile) del respiro, ",
   "iti85:3.3": "vede la tranquillizzazione ",
   "iti85:3.4": "di tutte le condizioni (creazioni). ",
