--- a/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti94:2.1": "Se un cercatore esaminasse da vicino in accordo con la realtà che la propria coscienza non sia distratta e dispersa all’esterno, né intrappolata all’interno, non impossessandosi di nulla, non si agiterebbe. ",
-  "iti94:2.2": "Quando c’è consapevolezza che la coscienza non è né distratta né dispersa all’esterno, né è intrappolata all’interno, e non impossessandosi di nulla non si agita, non c’è più futura generazione di nascita, vecchiaia, morte, sofferenza. ",
+  "iti94:2.2": "Quando c’è consapevolezza che la coscienza non è né distratta né dispersa all’esterno, né è intrappolata all’interno e non impossessandosi di nulla non si agita, non c’è più futura generazione di nascita, vecchiaia, morte, sofferenza. ",
   "iti94:3.1": "Per il cercatore che ha abbandonato sette catene,* ",
   "iti94:3.2": "ha reciso il conduttore, ",
   "iti94:3.3": "ha annientato la rinascita nel saṁsāra, ",
