--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti95:2.1": "Cercatori, ci sono queste tre occorrenze di piaceri dei sensi. ",
   "iti95:2.2": "Quali tre? ",
-  "iti95:2.3": "Desideri presenti, che si deliziano nella creazione, che hanno potere sulla creazioni degli altri. ",
+  "iti95:2.3": "Alcuni desideri sono presenti, alcuni sono per chi si delizia nella creazione, alcuni sono per chi ha potere sulla creazioni degli altri. ",
   "iti95:3.1": "con desideri perenni ",
   "iti95:3.2": "le Deva Vasavatti. ",
   "iti95:3.3": "le Deva Nimmānarati, ",
