Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti95:2.1": "Cercatori, ci sono queste tre rinascite nei reami sensuali. ",
+  "iti95:2.1": "Cercatori, ci sono queste tre rinascite nei reami dei sensi. ",
   "iti95:2.2": "Quali tre? ",
   "iti95:2.3": "Alcuni desideri sono presenti, alcuni sono per chi si delizia nella creazione, alcuni sono per chi ha potere sulla creazioni degli altri. ",
   "iti95:3.1": "con desideri perenni ",
