--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti95:2.1": "Cercatori, ci sono queste tre rinascite nei reami sensuali. ",
   "iti95:2.2": "Quali tre? ",
-  "iti95:2.3": "Quella in cui i desideri sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
+  "iti95:2.3": "Quella in cui i piaceri dei sensi sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
   "iti95:3.1": "con desideri perenni ",
   "iti95:3.2": "le Deva Vasavatti. ",
   "iti95:3.3": "le Deva Nimmānarati, ",
