Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti95:2.3": "Quella in cui i piaceri dei sensi sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
   "iti95:3.1": "Ci sono deva in cui i piaceri dei sensi sono presenti ",
   "iti95:3.2": "che li controllano, ",
-  "iti95:3.3": "le Deva Nimmānarati, ",
+  "iti95:3.3": "altri che si deliziano nel crearli, ",
   "iti95:3.4": "indugiano nei piaceri dei sensi, ",
   "iti95:3.5": "e non trascendono il Saṁsāra, ",
   "iti95:3.6": "né in questa vita, né in un’altra. ",
