Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti95:4.1": "Conoscendo il pericolo ",
   "iti95:4.2": "dei piaceri dei sensi, il saggio ",
   "iti95:4.3": "rinuncerebbe a tutti i piaceri dei sensi ",
-  "iti95:4.4": "sia divini che umani ",
+  "iti95:4.4": "sia divini che umani. ",
   "iti95:5.1": "Legata alle piacevoli e care forme ",
   "iti95:5.2": "la corrente difficile da attraversare, tagliandola ",
   "iti95:5.3": "hanno raggiunto il completo parinibbāna, ",
