Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "mn79:0.1": "Mittlere Lehrreden 79 "
+  "mn79:0.1": "Mittlere Lehrreden 79 ",
+  "mn79:0.2": "Die kürzere Lehrrede mit Sakuludāyī "
 }
