Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "mn79:0.1": "Mittlere Lehrreden 79 ",
   "mn79:0.2": "Die kürzere Lehrrede mit Sakuludāyī ",
-  "mn79:1.1": "So habe ich es gehört: "
+  "mn79:1.1": "So habe ich es gehört: ",
+  "mn79:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
 }
