--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn79:0.1": "Mittlere Lehrreden 79 ",
   "mn79:0.2": "Die kürzere Lehrrede mit Sakuludāyī ",
   "mn79:1.1": "So habe ich es gehört: ",
-  "mn79:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. "
+  "mn79:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
+  "mn79:1.3": "Zu dieser Zeit nun befand sich der Wanderer Sakuludāyī zusammen mit einer großen Versammlung von Wanderern im Wandererkloster am Futterplatz der Pfauen. "
 }
