--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "mn79:1.2": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "mn79:1.3": "Zu dieser Zeit nun befand sich der Wanderer Sakuludāyī zusammen mit einer großen Versammlung von Wanderern im Wandererkloster am Futterplatz der Pfauen. ",
   "mn79:2.1": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Rājagaha zum Almosengang. ",
-  "mn79:2.2": "Da kam ihm in den Sinn: "
+  "mn79:2.2": "Da kam ihm in den Sinn: ",
+  "mn79:2.3": "„Es ist zu früh für den Almosengang in Rājagaha. "
 }
