Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn79:2.2": "Da kam ihm in den Sinn: ",
   "mn79:2.3": "„Es ist zu früh für den Almosengang in Rājagaha. ",
   "mn79:2.4": "Warum besuche ich nicht den Wanderer Sakuludāyī im Wandererkloster am Futterplatz der Pfauen?“ ",
-  "mn79:2.5": "Und der Buddha ging zu dem Wandererkloster. "
+  "mn79:2.5": "Und der Buddha ging zu dem Wandererkloster. ",
+  "mn79:3.1": "Zu dieser Zeit saß Sakuludāyī mit einer großen Versammlung von Wanderern beisammen, und sie machten einen Tumult, einen Höllenlärm. Sie führten unwürdige Gespräche aller Art "
 }
