Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn79:3.2": "wie Gespräche über Könige, Räuber und Oberminister, über Heere, Bedrohungen und Kriege, über Essen, Trinken, Kleider und Schlafstellen, über Kränze und Düfte, über die Familie, Fahrzeuge, Dörfer, Marktflecken, Städte und Länder, über Frauen und Helden, Straßen- und Brunnengespräch, Gespräch über Verstorbene, über allerlei Dinge, Geschichten vom Land und vom Meer und Gespräche über Wiedergeburt in diesem oder jenem Daseinszustand. ",
   "mn79:3.3": "Sakuludāyī sah den Buddha von Weitem kommen ",
   "mn79:3.4": "und brachte seine Versammlung zum Schweigen: ",
-  "mn79:3.5": "„Seid still, gute Herren, macht keinen Lärm. "
+  "mn79:3.5": "„Seid still, gute Herren, macht keinen Lärm. ",
+  "mn79:3.6": "Hier kommt der Asket Gotama. "
 }
