Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn79:3.3": "Sakuludāyī sah den Buddha von Weitem kommen ",
   "mn79:3.4": "und brachte seine Versammlung zum Schweigen: ",
   "mn79:3.5": "„Seid still, gute Herren, macht keinen Lärm. ",
-  "mn79:3.6": "Hier kommt der Asket Gotama. "
+  "mn79:3.6": "Hier kommt der Asket Gotama. ",
+  "mn79:3.7": "Der Ehrwürdige liebt die Stille und preist die Stille. "
 }
