--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn79:3.5": "„Seid still, gute Herren, macht keinen Lärm. ",
   "mn79:3.6": "Hier kommt der Asket Gotama. ",
   "mn79:3.7": "Der Ehrwürdige liebt die Stille und preist die Stille. ",
-  "mn79:3.8": "Wenn er sieht, dass unsere Versammlung still ist, wird er es hoffentlich für angebracht halten, näherzukommen.“ "
+  "mn79:3.8": "Wenn er sieht, dass unsere Versammlung still ist, wird er es hoffentlich für angebracht halten, näherzukommen.“ ",
+  "mn79:3.9": "Und diese Wanderer verstummten. "
 }
