Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn79:3.6": "Hier kommt der Asket Gotama. ",
   "mn79:3.7": "Der Ehrwürdige liebt die Stille und preist die Stille. ",
   "mn79:3.8": "Wenn er sieht, dass unsere Versammlung still ist, wird er es hoffentlich für angebracht halten, näherzukommen.“ ",
-  "mn79:3.9": "Und diese Wanderer verstummten. "
+  "mn79:3.9": "Und diese Wanderer verstummten. ",
+  "mn79:4.1": "Da ging der Buddha zum Wanderer Sakuludāyī, "
 }
