Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn79:3.8": "Wenn er sieht, dass unsere Versammlung still ist, wird er es hoffentlich für angebracht halten, näherzukommen.“ ",
   "mn79:3.9": "Und diese Wanderer verstummten. ",
   "mn79:4.1": "Da ging der Buddha zum Wanderer Sakuludāyī, ",
-  "mn79:4.2": "und dieser sagte zu ihm: "
+  "mn79:4.2": "und dieser sagte zu ihm: ",
+  "mn79:4.3": "„Der Gesegnete komme her, Herr! "
 }
