--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "mn79:3.9": "Und diese Wanderer verstummten. ",
   "mn79:4.1": "Da ging der Buddha zum Wanderer Sakuludāyī, ",
   "mn79:4.2": "und dieser sagte zu ihm: ",
-  "mn79:4.3": "„Der Gesegnete komme her, Herr! "
+  "mn79:4.3": "„Der Gesegnete komme her, Herr! ",
+  "mn79:4.4": "Willkommen dem Gesegneten, Herr! "
 }
