Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "mn79:4.1": "Da ging der Buddha zum Wanderer Sakuludāyī, ",
   "mn79:4.2": "und dieser sagte zu ihm: ",
   "mn79:4.3": "„Der Gesegnete komme her, Herr! ",
-  "mn79:4.4": "Willkommen dem Gesegneten, Herr! "
+  "mn79:4.4": "Willkommen dem Gesegneten, Herr! ",
+  "mn79:4.5": "Es ist lange her, dass du die Gelegenheit genutzt hast, hierherzukommen. "
 }
