--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "mn79:4.3": "„Der Gesegnete komme her, Herr! ",
   "mn79:4.4": "Willkommen dem Gesegneten, Herr! ",
   "mn79:4.5": "Es ist lange her, dass du die Gelegenheit genutzt hast, hierherzukommen. ",
-  "mn79:4.6": "Setz dich bitte, Herr, dieser Sitz ist bereit.“ "
+  "mn79:4.6": "Setz dich bitte, Herr, dieser Sitz ist bereit.“ ",
+  "mn79:4.8": "Der Buddha setzte sich auf den ausgebreiteten Sitz "
 }
