--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn79:4.6": "Setz dich bitte, Herr, dieser Sitz ist bereit.“ ",
   "mn79:4.8": "Der Buddha setzte sich auf den ausgebreiteten Sitz ",
   "mn79:4.9": "während Sakuludāyī einen niedrigeren Sitz nahm und sich zur Seite hinsetzte. ",
-  "mn79:4.10": "Der Buddha sagte zu ihm: "
+  "mn79:4.10": "Der Buddha sagte zu ihm: ",
+  "mn79:4.11": "„Udāyī, worüber habt ihr gerade gesprochen, als ihr hier beisammensaßt? Welches Gespräch wurde unterbrochen?“ "
 }
