--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "mn79:4.9": "während Sakuludāyī einen niedrigeren Sitz nahm und sich zur Seite hinsetzte. ",
   "mn79:4.10": "Der Buddha sagte zu ihm: ",
   "mn79:4.11": "„Udāyī, worüber habt ihr gerade gesprochen, als ihr hier beisammensaßt? Welches Gespräch wurde unterbrochen?“ ",
-  "mn79:5.1": "„Herr, das, worüber wir gerade gesprochen haben, wollen wir beiseite lassen. "
+  "mn79:5.1": "„Herr, das, worüber wir gerade gesprochen haben, wollen wir beiseite lassen. ",
+  "mn79:5.2": "Es wird nicht schwer für dich sein, das später zu erfahren. "
 }
