Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "mn79:4.11": "„Udāyī, worüber habt ihr gerade gesprochen, als ihr hier beisammensaßt? Welches Gespräch wurde unterbrochen?“ ",
   "mn79:5.1": "„Herr, das, worüber wir gerade gesprochen haben, wollen wir beiseite lassen. ",
   "mn79:5.2": "Es wird nicht schwer für dich sein, das später zu erfahren. ",
-  "mn79:5.3": "Wenn ich nicht zu der Versammlung komme, sitzen sie beisammen und führen unwürdige Gespräche aller Art. "
+  "mn79:5.3": "Wenn ich nicht zu der Versammlung komme, sitzen sie beisammen und führen unwürdige Gespräche aller Art. ",
+  "mn79:5.4": "Aber wenn ich zu der Versammlung gekommen bin, sitzen sie da und blicken nur zu meinem Gesicht auf: "
 }
