--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti95:2.1": "Cercatori, ci sono queste tre rinascite nei reami sensuali. ",
   "iti95:2.2": "Quali tre? ",
   "iti95:2.3": "Quella in cui i piaceri dei sensi sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
-  "iti95:3.1": "Per alcuni i piaceri dei sensi sono presenti ",
+  "iti95:3.1": "Per alcuni i piaceri dei sensi sono presenti, ",
   "iti95:3.2": "alcuni deva li controllano, ",
   "iti95:3.3": "altri deva si deliziano nel crearli. ",
   "iti95:3.4": "Chi indugia nei piaceri dei sensi, ",
