--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti95:3.1": "Quelli per cui i piaceri dei sensi sono presenti, ",
   "iti95:3.2": "quei deva che li controllano ",
   "iti95:3.3": "e quei deva si deliziano nel crearli: ",
-  "iti95:3.4": "Chi indugia nei piaceri dei sensi, ",
+  "iti95:3.4": "tutti coloro che indugiano nei piaceri dei sensi, ",
   "iti95:3.5": "non trascende il Saṁsāra, ",
   "iti95:3.6": "né in questa vita, né in un’altra. ",
   "iti95:4.1": "Avendo conosciuto il pericolo ",
