--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti95:3.2": "quei deva che li controllano ",
   "iti95:3.3": "e quei deva si deliziano nel crearli: ",
   "iti95:3.4": "tutti coloro che indugiano nei piaceri dei sensi, ",
-  "iti95:3.5": "non trascende il Saṁsāra, ",
+  "iti95:3.5": "non trascendono il Saṁsāra, ",
   "iti95:3.6": "né in questa vita, né in un’altra. ",
   "iti95:4.1": "Avendo conosciuto il pericolo ",
   "iti95:4.2": "dei piaceri dei sensi, il saggio ",
