--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti95:3.4": "tutti coloro che indugiano nei piaceri dei sensi, ",
   "iti95:3.5": "non trascendono il Saṁsāra, ",
   "iti95:3.6": "né in questa vita, né in un’altra. ",
-  "iti95:4.1": "Avendo conosciuto il pericolo ",
+  "iti95:4.1": "Conoscendo il pericolo ",
   "iti95:4.2": "dei piaceri dei sensi, il saggio ",
   "iti95:4.3": "rinuncia a tutti i piaceri dei sensi ",
   "iti95:4.4": "sia divini che umani. ",
