Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti95:3.6": "né in questa vita, né in un’altra. ",
   "iti95:4.1": "Conoscendo il pericolo ",
   "iti95:4.2": "dei piaceri dei sensi, il saggio ",
-  "iti95:4.3": "rinuncia a tutti i piaceri dei sensi ",
+  "iti95:4.3": "rinuncia a tutti i piaceri dei sensi, ",
   "iti95:4.4": "sia divini che umani. ",
   "iti95:5.1": "Legata alle piacevoli e care forme ",
   "iti95:5.2": "la corrente difficile da attraversare, tagliandola ",
