--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti95:4.4": "sia divini che umani. ",
   "iti95:5.1": "Legata alle piacevoli e care forme ",
   "iti95:5.2": "la corrente difficile da attraversare, tagliandola ",
-  "iti95:5.3": "hanno raggiunto il completo parinibbāna, ",
+  "iti95:5.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti95:5.4": "hanno completamente trasceso la sofferenza. ",
   "iti95:6.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti95:6.2": "comprendendo correttamente (nel modo giusto), ",
