--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -18,6 +18,6 @@
   "iti95:5.4": "hanno completamente trasceso la sofferenza. ",
   "iti95:6.1": "Quei nobili veggenti, ",
   "iti95:6.2": "comprendendo correttamente (nel modo giusto), ",
-  "iti95:6.3": "con la conoscenza superiore della distruzione della nascita, ",
+  "iti95:6.3": "con l’eliminazione della nascita come superiore conoscenza, ",
   "iti95:6.4": "non ritornano più a nuova esistenza.” "
 }
