--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti95:4.3": "rinuncia a tutti i piaceri dei sensi, ",
   "iti95:4.4": "sia divini che umani. ",
   "iti95:5.1": "Avendo reciso il legame alle forme piacevoli e care, ",
-  "iti95:5.2": "la corrente difficile da attraversare, tagliandola ",
+  "iti95:5.2": "la corrente difficile da attraversare, ",
   "iti95:5.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti95:5.4": "hanno completamente trasceso la sofferenza. ",
   "iti95:6.1": "Quei nobili veggenti, ",
