--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti95:5.1": "Avendo reciso/rotto/tagliato il legame alle forme piacevoli e care, ",
   "iti95:5.2": "la corrente difficile da attraversare, ",
   "iti95:5.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
-  "iti95:5.4": "hanno completamente trasceso la sofferenza. ",
+  "iti95:5.4": "e trascendono la sofferenza senza residui. ",
   "iti95:6.1": "Quei nobili veggenti, ",
   "iti95:6.2": "comprendendo correttamente (nel modo giusto), ",
   "iti95:6.3": "con l’eliminazione della nascita come superiore conoscenza, ",
