--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti95:2.1": "Cercatori, ci sono queste tre rinascite nella sfera sensuale. ",
+  "iti95:2.1": "Cercatori, ci sono queste tre rinascite nella sfera sensuale. (nei reami sensuali) ",
   "iti95:2.2": "Quali tre? ",
   "iti95:2.3": "Quella in cui i piaceri dei sensi sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
   "iti95:3.1": "Quelli per cui i piaceri dei sensi sono presenti, ",
