Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "mn79:5.2": "Es wird nicht schwer für dich sein, das später zu erfahren. ",
   "mn79:5.3": "Wenn ich nicht zu der Versammlung komme, sitzen sie beisammen und führen unwürdige Gespräche aller Art. ",
   "mn79:5.4": "Aber wenn ich zu der Versammlung gekommen bin, sitzen sie da und blicken nur zu meinem Gesicht auf: ",
-  "mn79:5.5": "‚Was immer der Asket Udāyī lehrt, dem wollen wir lauschen!‘ "
+  "mn79:5.5": "‚Was immer der Asket Udāyī lehrt, dem wollen wir lauschen!‘ ",
+  "mn79:5.6": "Aber wenn der Buddha zu der Versammlung gekommen ist, sitzen sowohl ich als auch die Versammlung da und blicken zu deinem Gesicht auf: "
 }
