--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn79:5.4": "Aber wenn ich zu der Versammlung gekommen bin, sitzen sie da und blicken nur zu meinem Gesicht auf: ",
   "mn79:5.5": "‚Was immer der Asket Udāyī lehrt, dem wollen wir lauschen!‘ ",
   "mn79:5.6": "Aber wenn der Buddha zu der Versammlung gekommen ist, sitzen sowohl ich als auch die Versammlung da und blicken zu deinem Gesicht auf: ",
-  "mn79:5.7": "‚Was immer der Buddha lehrt, dem wollen wir lauschen!‘“ "
+  "mn79:5.7": "‚Was immer der Buddha lehrt, dem wollen wir lauschen!‘“ ",
+  "mn79:6.1": "„Nun, Udāyī, schlage etwas vor, über das ich sprechen soll.“ "
 }
