Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn79:5.5": "‚Was immer der Asket Udāyī lehrt, dem wollen wir lauschen!‘ ",
   "mn79:5.6": "Aber wenn der Buddha zu der Versammlung gekommen ist, sitzen sowohl ich als auch die Versammlung da und blicken zu deinem Gesicht auf: ",
   "mn79:5.7": "‚Was immer der Buddha lehrt, dem wollen wir lauschen!‘“ ",
-  "mn79:6.1": "„Nun, Udāyī, schlage etwas vor, über das ich sprechen soll.“ "
+  "mn79:6.1": "„Nun, Udāyī, schlage etwas vor, über das ich sprechen soll.“ ",
+  "mn79:6.2": "„Herr Gotama, vor ein paar Tagen behauptete jemand, allwissend und all-sehend zu sein und alles ohne Ausnahme zu erkennen und zu sehen, und zwar so: ‚Erkennen und Sehen sind mir ständig und fortwährend gegenwärtig, ob ich gehe, stehe, schlafe oder wache.‘ "
 }
