--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "mn79:5.7": "‚Was immer der Buddha lehrt, dem wollen wir lauschen!‘“ ",
   "mn79:6.1": "„Nun, Udāyī, schlage etwas vor, über das ich sprechen soll.“ ",
   "mn79:6.2": "„Herr Gotama, vor ein paar Tagen behauptete jemand, allwissend und all-sehend zu sein und alles ohne Ausnahme zu erkennen und zu sehen, und zwar so: ‚Erkennen und Sehen sind mir ständig und fortwährend gegenwärtig, ob ich gehe, stehe, schlafe oder wache.‘ ",
-  "mn79:6.3": "Als ich ihm eine Frage über die Vergangenheit stellte, wich er dem Problem aus, lenkte das Gespräch auf Nebensächlichkeiten und zeigte Ärger, Hass und Unmut. "
+  "mn79:6.3": "Als ich ihm eine Frage über die Vergangenheit stellte, wich er dem Problem aus, lenkte das Gespräch auf Nebensächlichkeiten und zeigte Ärger, Hass und Unmut. ",
+  "mn79:6.4": "Da musste ich an den Buddha denken: "
 }
