Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "mn79:6.3": "Als ich ihm eine Frage über die Vergangenheit stellte, wich er dem Problem aus, lenkte das Gespräch auf Nebensächlichkeiten und zeigte Ärger, Hass und Unmut. ",
   "mn79:6.4": "Da musste ich an den Buddha denken: ",
   "mn79:6.5": "‚Sicher muss das der Gesegnete sein, der Heilige, der in solchen Dingen so bewandert ist.‘“ ",
-  "mn79:6.6": "„Aber Udāyī, wer hat das behauptet und sich so verhalten?“ "
+  "mn79:6.6": "„Aber Udāyī, wer hat das behauptet und sich so verhalten?“ ",
+  "mn79:6.7": "„Es war der Jaina-Asket aus dem Stamm Ñātika, Herr.“ "
 }
