--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "mn79:6.5": "‚Sicher muss das der Gesegnete sein, der Heilige, der in solchen Dingen so bewandert ist.‘“ ",
   "mn79:6.6": "„Aber Udāyī, wer hat das behauptet und sich so verhalten?“ ",
   "mn79:6.7": "„Es war der Jaina-Asket aus dem Stamm Ñātika, Herr.“ ",
-  "mn79:7.1": "„Udāyī, jemand, der sich an viele Arten früherer Leben erinnert … mit den Merkmalen und Einzelheiten, könnte mir eine Frage über die Vergangenheit stellen, oder ich könnte ihm eine Frage über die Vergangenheit stellen. "
+  "mn79:7.1": "„Udāyī, jemand, der sich an viele Arten früherer Leben erinnert … mit den Merkmalen und Einzelheiten, könnte mir eine Frage über die Vergangenheit stellen, oder ich könnte ihm eine Frage über die Vergangenheit stellen. ",
+  "mn79:7.2": "Und er könnte mich mit seiner Antwort zufriedenstellen, oder ich könnte ihn mit meiner Antwort zufriedenstellen. "
 }
