Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn4_translation-de-sabbamitta.json
@@ -136,7 +136,7 @@
   "dn4:11.6": "und damit er, wenn er sagt: ‚Ich bin ein Brahmane‘, richtig spricht, ohne in Unwahrheit zu verfallen?“ ",
   "dn4:12.1": "Da dachte Soṇadaṇḍa: ",
   "dn4:12.2": "„Der Asket Gotama hat mich genau nach dem gefragt, was ich wollte, was ich mir wünschte, wonach ich verlangte und mich sehnte, das heißt, nach meinem eigenen textlichen Erbe. ",
-  "dn4:12.4": "Ich kann bestimmt seinen Geist mit meiner Antwort zufriedenstellen.“ ",
+  "dn4:12.4": "Ich kann ihn bestimmt mit meiner Antwort zufriedenstellen.“ ",
   "dn4:13.1": "Da richtete Soṇadaṇḍa seinen Körper auf, blickte über die Versammlung und sagte zum Buddha: ",
   "dn4:13.2": "„Herr Gotama, ein Brahmane muss fünf Faktoren besitzen, damit die Brahmanen ihn als einen Brahmanen beschreiben ",
   "dn4:13.3": "und damit er, wenn er sagt: ‚Ich bin ein Brahmane‘, richtig spricht, ohne in Unwahrheit zu verfallen. ",
