--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "mn79:6.7": "„Es war der Jaina-Asket aus dem Stamm Ñātika, Herr.“ ",
   "mn79:7.1": "„Udāyī, jemand, der sich an viele Arten früherer Leben erinnert … mit den Merkmalen und Einzelheiten, könnte mir eine Frage über die Vergangenheit stellen, oder ich könnte ihm eine Frage über die Vergangenheit stellen. ",
   "mn79:7.2": "Und er könnte mich mit seiner Antwort zufriedenstellen, oder ich könnte ihn mit meiner Antwort zufriedenstellen. ",
-  "mn79:7.3": "Jemand, der mit geläuterter und übermenschlicher Hellsichtigkeit … versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden, könnte mir eine Frage über die Zukunft stellen, oder ich könnte ihm eine Frage über die Zukunft stellen. "
+  "mn79:7.3": "Jemand, der mit geläuterter und übermenschlicher Hellsichtigkeit … versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden, könnte mir eine Frage über die Zukunft stellen, oder ich könnte ihm eine Frage über die Zukunft stellen. ",
+  "mn79:7.4": "Und er könnte mich mit seiner Antwort zufriedenstellen, oder ich könnte ihn mit meiner Antwort zufriedenstellen. "
 }
