--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "mn79:7.3": "Jemand, der mit geläuterter und übermenschlicher Hellsichtigkeit … versteht, wie Lebewesen entsprechend ihrer Taten wiedergeboren werden, könnte mir eine Frage über die Zukunft stellen, oder ich könnte ihm eine Frage über die Zukunft stellen. ",
   "mn79:7.4": "Und er könnte mich mit seiner Antwort zufriedenstellen, oder ich könnte ihn mit meiner Antwort zufriedenstellen. ",
   "mn79:7.5": "Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. ",
-  "mn79:7.6": "Ich will dich den Dhamma lehren: "
+  "mn79:7.6": "Ich will dich den Dhamma lehren: ",
+  "mn79:7.7": "‚Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. "
 }
