Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "mn79:7.4": "Und er könnte mich mit seiner Antwort zufriedenstellen, oder ich könnte ihn mit meiner Antwort zufriedenstellen. ",
   "mn79:7.5": "Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. ",
   "mn79:7.6": "Ich will dich den Dhamma lehren: ",
-  "mn79:7.7": "‚Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. "
+  "mn79:7.7": "‚Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. ",
+  "mn79:7.8": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.‘“ "
 }
