--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "mn79:7.5": "Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. ",
   "mn79:7.6": "Ich will dich den Dhamma lehren: ",
   "mn79:7.7": "‚Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. ",
-  "mn79:7.8": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.‘“ "
+  "mn79:7.8": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.‘“ ",
+  "mn79:8.1": "„Nun, Herr, ich kann mich nicht einmal mit den Merkmalen und Einzelheiten an das erinnern, was ich in dieser Inkarnation erlebt habe. "
 }
