--- a/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti87:2.3": "Pensieri legati ai piaceri sensuali, ",
   "iti87:2.4": "all’avversione/ostilità (forse Byāpāda è meglio come ostilità, malevolenza, invece che avversione / resistenza) ",
   "iti87:2.5": "e al fare del male. (aggressione) ",
-  "iti87:3.1": "“Cercatori, questi tre pensieri benefici donano la vista, danno la visione, creano sapienza, crescono la saggezza, dispongono al non tormento e conducono al Nibbāna. ",
+  "iti87:3.1": "“Cercatori, questi tre pensieri benefici donano la vista, danno la visione, creano sapienza, crescono la saggezza, non dispongono al tormento e conducono al Nibbāna. ",
   "iti87:3.2": "Quali tre? ",
   "iti87:3.3": "Pensieri legati alla rinuncia, ",
   "iti87:3.4": "al non essere ostili (avversi) ",
