--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "mn79:7.7": "‚Wenn dieses besteht, ist jenes; aufgrund des Entstehens von diesem entsteht jenes. ",
   "mn79:7.8": "Wenn dieses nicht besteht, ist jenes nicht; aufgrund des Aufhörens von diesem hört jenes auf.‘“ ",
   "mn79:8.1": "„Nun, Herr, ich kann mich nicht einmal mit den Merkmalen und Einzelheiten an das erinnern, was ich in dieser Inkarnation erlebt habe. ",
-  "mn79:8.2": "Wie soll ich mich da an viele Arten früherer Leben mit den Merkmalen und Einzelheiten erinnern wie der Buddha? "
+  "mn79:8.2": "Wie soll ich mich da an viele Arten früherer Leben mit den Merkmalen und Einzelheiten erinnern wie der Buddha? ",
+  "mn79:8.3": "Ich kann ja jetzt nicht einmal einen Erdkobold sehen. "
 }
