Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "mn79:8.2": "Wie soll ich mich da an viele Arten früherer Leben mit den Merkmalen und Einzelheiten erinnern wie der Buddha? ",
   "mn79:8.3": "Ich kann ja jetzt nicht einmal einen Erdkobold sehen. ",
   "mn79:8.4": "Wie soll ich da mit geläuterter und übermenschlicher Hellsichtigkeit verstehen … wie Lebewesen entsprechend ihrer Taten wiedergeboren werden wie der Buddha? ",
-  "mn79:8.5": "Doch der Buddha hat zu mir gesagt: "
+  "mn79:8.5": "Doch der Buddha hat zu mir gesagt: ",
+  "mn79:8.6": "‚Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. "
 }
