--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "mn79:8.3": "Ich kann ja jetzt nicht einmal einen Erdkobold sehen. ",
   "mn79:8.4": "Wie soll ich da mit geläuterter und übermenschlicher Hellsichtigkeit verstehen … wie Lebewesen entsprechend ihrer Taten wiedergeboren werden wie der Buddha? ",
   "mn79:8.5": "Doch der Buddha hat zu mir gesagt: ",
-  "mn79:8.6": "‚Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. "
+  "mn79:8.6": "‚Aber Udāyī, lass die Vergangenheit und die Zukunft beiseite. ",
+  "mn79:8.7": "Ich will dich den Dhamma lehren: "
 }
