Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -63,5 +63,6 @@
   "mn79:9.1": "„Aber Udāyī, was ist deine eigene Tradition?“ ",
   "mn79:9.2": "„Herr, sie ist dies: ",
   "mn79:9.3": "‚Das ist die höchste Herrlichkeit, das ist die höchste Herrlichkeit.‘“ ",
-  "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ "
+  "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ ",
+  "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit höher ist.“ "
 }
