Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn79:9.2": "„Herr, sie ist dies: ",
   "mn79:9.3": "‚Das ist die höchste Herrlichkeit, das ist die höchste Herrlichkeit.‘“ ",
   "mn79:9.4": "„Aber was ist diese höchste Herrlichkeit?“ ",
-  "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ "
+  "mn79:9.6": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
+  "mn79:9.7": "„Aber was ist diese höchste Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist?“ "
 }
