Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti88_translation-it-soma.json
@@ -21,7 +21,7 @@
   "iti88:8.3": "L’odio cade giù ",
   "iti88:8.4": "come il frutto maturo da una palma. ",
   "iti88:11.1": "Chi annienta l’illusione, ",
-  "iti88:11.2": "non è illuso, né potrebbe essere deragliato dall’illusione. ",
+  "iti88:11.2": "non è illuso, né potrebbe essere sviato dall’illusione. ",
   "iti88:11.3": "Tutta l’illusione va via ",
   "iti88:11.4": "come l’oscurità quando sorge il sole. "
 }
