Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "mn79:10.2": "Du sagst: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht. ",
   "mn79:10.3": "Angenommen, ein Mann würde sagen: ",
   "mn79:10.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ ",
-  "mn79:10.5": "Man würde zu ihm sagen: "
+  "mn79:10.5": "Man würde zu ihm sagen: ",
+  "mn79:10.6": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – weißt du, ob sie eine Adlige, eine Brahmanin, eine Landarbeiterin oder eine Hilfsarbeiterin ist?‘ "
 }
