Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -73,5 +73,6 @@
   "mn79:10.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ ",
   "mn79:10.5": "Man würde zu ihm sagen: ",
   "mn79:10.6": "‚Guter Mann, diese erlesenste Dame im Land, die du begehrst – weißt du, ob sie eine Adlige, eine Brahmanin, eine Landarbeiterin oder eine Hilfsarbeiterin ist?‘ ",
-  "mn79:10.7": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ "
+  "mn79:10.7": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ ",
+  "mn79:10.8": "Man würde zu ihm sagen: "
 }
