Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "mn79:10.10": "Wenn er so gefragt würde, würde er sagen: ‚Nein.‘ ",
   "mn79:10.11": "Man würde zu ihm sagen: ",
   "mn79:10.12": "‚Guter Mann, begehrst du eine, die du nie auch nur gekannt oder gesehen hast?‘ ",
-  "mn79:10.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ "
+  "mn79:10.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
+  "mn79:10.14": "Was denkst du, Udāyī? "
 }
