Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -82,5 +82,6 @@
   "mn79:10.13": "Wenn er so gefragt würde, würde er sagen: ‚Ja.‘ ",
   "mn79:10.14": "Was denkst du, Udāyī? ",
   "mn79:10.15": "Wenn das so ist, stellt sich da nicht heraus, dass die Aussage dieses Mannes keine beweisbare Grundlage hat?“ ",
-  "mn79:10.16": "„Sicherlich ist das so, Herr.“ "
+  "mn79:10.16": "„Sicherlich ist das so, Herr.“ ",
+  "mn79:10.17": "„Ebenso sagst du: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht.“ "
 }
