Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn134_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn134_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn134_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "mn134:2.8": "Hast du sie im Gedächtnis?“ ",
   "mn134:2.9": "„Ja, das habe ich.“ ",
   "mn134:2.10": "„Wie hast du die Strophen über den im Gedächtnis, der eine erlesene Nacht hat?“ ",
-  "mn134:2.11": "„Dieses eine Mal hielt sich der Buddha unter den Göttern der Dreiunddreißig am Fuß des Sonnenschirm-Orchideenbaums auf, auf dem Stein, der mit einem hellen Tuch gepolstert ist. ",
+  "mn134:2.11": "„Dieses eine Mal hielt sich der Buddha unter den Göttern der Dreiunddreißig am Fuß des Sonnenschirm-Orchideenbaums auf, auf dem Stein, der mit einem cremefarbenen Tuch gepolstert ist. ",
   "mn134:2.12": "Dort lehrte er die Götter der Dreiunddreißig den Merksatz zum Aufsagen und die Aufgliederung über den, der eine erlesene Nacht hat: ",
   "mn134:3.1": "‚Wendet euch nicht zu Vergangenem zurück, ",
   "mn134:3.2": "wartet nicht auf Künftiges. ",
