Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn17_translation-de-sabbamitta.json
@@ -268,7 +268,7 @@
   "dn17:2.5.4": "Er hatte 84.000 Liegen aus Gold, Silber, Elfenbein und Kernholz. Sie waren mit flauschigen, rein weißen oder mit Blumen bestickten wollenen Decken gepolstert und mit einer Decke aus feinem Hirschleder überzogen, mit einem Baldachin und roten Kissen auf beiden Seiten. ",
   "dn17:2.5.5": "Er hatte 84.000 Elefantenbullen mit goldenen Wimpeln und Fahnen, die von einem Netzwerk aus Schneegold bedeckt waren und unter denen der königliche Elefantenbulle mit Namen Besinnungstag der vorderste war. ",
   "dn17:2.5.6": "Er hatte 84.000 Pferde mit goldenen Wimpeln und Fahnen, die von einem Netzwerk aus Schneegold bedeckt waren und unter denen das königliche Ross mit Namen Donnerwolke das vorderste war. ",
-  "dn17:2.5.7": "Er hatte 84.000 Wagen, die mit Löwen-, Tiger- und Leopardenfellen oder hellem Tuch gepolstert waren, mit goldenen Wimpeln und Fahnen, von einem Netzwerk aus Schneegold bedeckt, unter denen der Wagen mit Namen Triumph der vorderste war. ",
+  "dn17:2.5.7": "Er hatte 84.000 Wagen, die mit Löwen-, Tiger- und Leopardenfellen oder cremefarbenem Tuch gepolstert waren, mit goldenen Wimpeln und Fahnen, von einem Netzwerk aus Schneegold bedeckt, unter denen der Wagen mit Namen Triumph der vorderste war. ",
   "dn17:2.5.8": "Er hatte 84.000 Edelsteine, unter denen das Edelstein-Juwel der vorderste war. ",
   "dn17:2.5.9": "Er hatte 84.000 Frauen, unter denen die Königin Subhaddā die vorderste war. ",
   "dn17:2.5.10": "Er hatte 84.000 Hausbesitzer, unter denen das Hausbesitzer-Juwel der vorderste war. ",
