Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -85,5 +85,5 @@
   "mn79:10.16": "„Sicherlich ist das so, Herr.“ ",
   "mn79:10.17": "„Ebenso sagst du: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht.“ ",
   "mn79:11.1": "„Herr, wie ein Schmuckstück aus Beryll von natürlicher Schönheit, mit acht Facetten, gut gearbeitet, das auf ein cremefarbenes Tuch gelegt wurde: Es leuchtet und glüht und strahlt. So ist die Herrlichkeit des Selbst, das nach dem Tod frei von Krankheit ist.“ ",
-  "mn79:12.1": "Was denkst du, Udāyī? "
+  "mn79:12.1": "„Was denkst du, Udāyī? "
 }
