Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn36/sn36.19_translation-de-sabbamitta.json
@@ -48,7 +48,7 @@
   "sn36.19:6.12": "Weil es ein anderes Glück gibt, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:7.1": "Und was ist dieses Glück? ",
   "sn36.19:7.2": "Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während er den Geist ausrichtet und hält. ",
-  "sn36.19:7.3": "Das ist ein Glück, das besser und erlesener ist als jenes. ",
+  "sn36.19:7.3": "Das ist ein Glück, das vortrefflicher und erlesener ist als jenes. ",
   "sn36.19:7.4": "Es gibt die, die sagen würden, ",
   "sn36.19:7.5": "dies sei das höchste Glück und Hochgefühl, das Lebewesen erfahren. ",
   "sn36.19:7.6": "Aber ich erkenne das nicht an. ",
