Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn75_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn75_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn75_translation-de-sabbamitta.json
@@ -96,7 +96,7 @@
   "mn75:11.7": "Was denkst du, Māgaṇḍiya? Würde dieser Gott, der sich im Garten des Entzückens in Gesellschaft einer Schar von Nymphen vergnügt, versorgt und ausgestattet mit den fünf Arten himmlischer sinnlicher Erregung, diesen Hausbesitzer oder das Kind eines Hausbesitzers um die fünf Arten menschlicher sinnlicher Erregung beneiden oder zu menschlichen Sinnenfreuden zurückkehren?“ ",
   "mn75:11.8": "„Nein, Herr Gotama. ",
   "mn75:11.9": "Warum ist das so? ",
-  "mn75:11.10": "Weil himmlische Sinnenfreuden besser sind als menschliche Sinnenfreuden.“ ",
+  "mn75:11.10": "Weil himmlische Sinnenfreuden vortrefflicher und erlesener sind als menschliche Sinnenfreuden.“ ",
   "mn75:12.1": "„Ebenso vergnügte ich mich, als ich noch ein Laie war, mit Bildern, die das Aug erkennt … mit Tönen, die das Ohr erkennt … ",
   "mn75:12.2": "mit Gerüchen, die die Nase erkennt … ",
   "mn75:12.3": "mit Geschmäcken, die die Zunge erkennt … ",
