Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -65,7 +65,7 @@
   "mn79:9.3": "‚Das ist der höchste Glanz, das ist der höchste Glanz.‘“ ",
   "mn79:9.4": "„Aber was ist dieser höchste Glanz?“ ",
   "mn79:9.6": "„Herr, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
-  "mn79:9.7": "„Aber was ist diese höchste Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist?“ ",
+  "mn79:9.7": "„Aber was ist dieser höchste Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist?“ ",
   "mn79:9.8": "„Herr, die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.“ ",
   "mn79:10.1": "„Udāyī, du könntest noch lange so fortfahren. ",
   "mn79:10.2": "Du sagst: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht. ",
